am adaugat un titlu cu h1 in html

--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     <script src="style-rahela.js"></script>
 </head>
 <body>
-    <h1>Proiect</h1>
-    <h2>Amalia si Rahela</h2>
-    <h3>Verificare</h3>
+    <h1>Quoridor</h1>
 </body>
 </html>
