am adaugat acei parametrii la titlul meu

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <script src="style-rahela.js"></script>
 </head>
 <body>
-    <h1>Quoridor</h1>
+    <header>
+        <h1 class="titlul" >Quoridor</h1>
+    </header>
+    
 </body>
 </html>
