am adaugat ce am scris in style, legat de titlul instructiuni

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <footer class="footer">
 
-        <h2>Instructiuni</h2>
+        <h2 class="instructiuni"></h2>>Instructiuni</h2>
         <p> 
             Aici vor fi afisate instructiunile cu jucatorii 
         <br>Aici vor fi afisate instructiunile pentru garduri 
