--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <footer class="footer">
 
-        <h2 class="instructiuni"></h2>>Instructiuni</h2>
+        <h2 class="instructiuni">Instructiuni</h2>
         <h3> <i class="bi bi-vignette" style="color: #fdfdd7;"></i> </h3>
         <p> 
             Aici vor fi afisate instructiunile cu jucatorii 
