--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <h1 class="titlul" >Quoridor</h1>
     </header>
     
+    <div id="canvas-pozitie"></div>
+    <script src="script.js"></script>
 
     <footer class="footer">
 
