--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
         <h2 class="instructiuni">Instructiuni</h2>
         <h3> <i class="bi bi-vignette" style="color: #fdfdd7;"></i> </h3>
         <p> 
-            Aici vor fi afisate instructiunile cu jucatorii 
-        <br>Aici vor fi afisate instructiunile pentru garduri 
+            Pentru a deplasa pionul 1, foloisti: W (sus), S (jos), D (dreapta), A (stanga).
+        <br>Pentru a deplasa pionul 2, foloisti: sageata sus, sageata jos, sageata dreapta ->, sageata stanga <-.
+        <br>Pentru a deplasa zidurile: faceti click pe ele, apasati V (vertical), O (orizonat), click in pozitia dorita. 
         </p>
         
     
